--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: 'obdasystems/sparqling-ws'
+          token: ${{ secrets.TOKEN }}
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -33,6 +34,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repository: 'obdasystems/sparqling'
+        token: ${{ secrets.TOKEN }}
     - name: Set up node
       uses: actions/setup-node@v2
       with:
