--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: NODE_OPTIONS="--max-old-space-size=4096" npm run build --if-present
-    - name: Upload monolith
+    - name: Upload ui
       uses: actions/upload-artifact@v3.0.0
       with:
         name: ui
